agency link replaced with wordprss version with label on hover. color on footer links changed, margin adjusted for mobile

--- a/src/projects.html
+++ b/src/projects.html
@@ -1,306 +1,310 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./styles/styles.scss">
-    <link rel="stylesheet" type="text/css" href="./styles/projects.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" type="text/css" href="./styles/styles.scss" />
+    <link rel="stylesheet" type="text/css" href="./styles/projects.css" />
     <title>Portfolio</title>
-</head>
-<body>
-<header id="navbar">
-    <nav>
+  </head>
+  <body>
+    <header id="navbar">
+      <nav>
         <ul>
-        <li><a href="/">About</a></li>
-        <li><a href="/projects/">Projects</a></li>
-        <li><a href="/contact/">Contact</a></li>
+          <li><a href="/">About</a></li>
+          <li><a href="/projects/">Projects</a></li>
+          <li><a href="/contact/">Contact</a></li>
         </ul>
-    </nav>
-</header>
+      </nav>
+    </header>
 
-<main class="main-projects">
-    <header class="projects-header">
-        <h2>Here Are My Web Site Projects</h2>
-        <p>Using the core technologies of the front end of the web, HTML, CSS, and JavaScript, these are mock sites
-            that were recoded from templates from scratch.
+    <main class="main-projects">
+      <header class="projects-header">
+        <h2>Here Are My Web Sites</h2>
+        <p>
+          Using the core technologies of the front end of the web, HTML, CSS,
+          and JavaScript, these are mock sites that were recoded from templates
+          from scratch.
         </p>
-    </header>
-<section class="projects">
-    <div class="project-tile">
-        <h5 class="project-title">Agency</h5>
-        <div class="project">
+      </header>
+      <section class="projects">
+        <div class="project-tile">
+          <h5 class="project-title">Agency</h5>
+          <div class="project">
             <div class="overlay"></div>
             <div class="p-links">
-                <span class="p-link">
-                    <a href="https://github.com/J-Guidry/noxen-colorlib-recoded">
-                        <span><i class="fa fa-github"></i></span>
-                        Code
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="https://agency-jg.netlify.com/">
-                        <span><i class="fa fa-globe"></i></span>
-                        Live
-                    </a>
-                </span>
+              <span class="p-link">
+                <span class="made">Made in</span>
+                <span class="made-in">WordPress</span>
+              </span>
+              <span class="p-link">
+                <a href="https://mock-agency.herokuapp.com/">
+                  <span><i class="fa fa-globe"></i></span>
+                  Live
+                </a>
+              </span>
             </div>
             <div class="project-img">
-                <img src="./images/agency.png" alt="Agency screenshot">
+              <img src="./images/agency.png" alt="Agency screenshot" />
             </div>
+          </div>
         </div>
-    </div>
 
-    <div class="project-tile">
-        <h5 class="project-title">Landing Page</h5>
-        <div class="project">
+        <div class="project-tile">
+          <h5 class="project-title">Landing Page</h5>
+          <div class="project">
             <div class="overlay"></div>
             <div class="p-links">
-                <span class="p-link">
-                    <a href="https://github.com/J-Guidry/startup-vanilla-colorlib">
-                        <span><i class="fa fa-github"></i></span>
-                        Code
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="https://landing-jg.netlify.com">
-                        <span><i class="fa fa-globe"></i></span>
-                        Live
-                    </a>
-                </span>
+              <span class="p-link">
+                <a href="https://github.com/J-Guidry/startup-vanilla-colorlib">
+                  <span><i class="fa fa-github"></i></span>
+                  Code
+                </a>
+              </span>
+              <span class="p-link">
+                <a href="https://landing-jg.netlify.com">
+                  <span><i class="fa fa-globe"></i></span>
+                  Live
+                </a>
+              </span>
             </div>
             <div class="project-img">
-                <img src="./images/landing.png" alt="Landing Page screenshot">
+              <img src="./images/landing.png" alt="Landing Page screenshot" />
             </div>
+          </div>
         </div>
-    </div>
-    <div class="project-tile">
-        <h5 class="project-title">Ecommerce Shop</h5>
-        <div class="project">
+        <div class="project-tile">
+          <h5 class="project-title">Ecommerce Shop</h5>
+          <div class="project">
             <div class="overlay"></div>
             <div class="p-links">
-                <span class="p-link">
-                    <a href="https://github.com/J-Guidry/eiser-colorlib-recoded">
-                        <span><i class="fa fa-github"></i></span>
-                        Code
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="https://shop-jg.netlify.com/">
-                        <span><i class="fa fa-globe"></i></span>
-                        Live
-                    </a>
-                </span>
+              <span class="p-link">
+                <a href="https://github.com/J-Guidry/eiser-colorlib-recoded">
+                  <span><i class="fa fa-github"></i></span>
+                  Code
+                </a>
+              </span>
+              <span class="p-link">
+                <a href="https://shop-jg.netlify.com/">
+                  <span><i class="fa fa-globe"></i></span>
+                  Live
+                </a>
+              </span>
             </div>
             <div class="project-img">
-                <img src="./images/shop.png" alt="Ecommerce screenshot">
+              <img src="./images/shop.png" alt="Ecommerce screenshot" />
             </div>
+          </div>
         </div>
-    </div>
-    <div class="project-tile">
-        <h5 class="project-title">Restaurant</h5>
-        <div class="project">
+        <div class="project-tile">
+          <h5 class="project-title">Restaurant</h5>
+          <div class="project">
             <div class="overlay"></div>
             <div class="p-links">
-                <span class="p-link">
-                    <a href="https://github.com/J-Guidry/luto-colorlib-recoded">
-                        <span><i class="fa fa-github"></i></span>
-                        Code
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="https://restaurant-jg.netlify.com/">
-                        <span><i class="fa fa-globe"></i></span>
-                        Live
-                    </a>
-                </span>
+              <span class="p-link">
+                <a href="https://github.com/J-Guidry/luto-colorlib-recoded">
+                  <span><i class="fa fa-github"></i></span>
+                  Code
+                </a>
+              </span>
+              <span class="p-link">
+                <a href="https://restaurant-jg.netlify.com/">
+                  <span><i class="fa fa-globe"></i></span>
+                  Live
+                </a>
+              </span>
             </div>
             <div class="project-img">
-                <img src="./images/restaurant.png" alt="restaurant screenshot">
+              <img src="./images/restaurant.png" alt="restaurant screenshot" />
             </div>
+          </div>
         </div>
-    </div>
-    <div class="project-tile">
-        <h5 class="project-title">Black Friday Sale E-mail</h5>
-        <div class="project">
+        <div class="project-tile">
+          <h5 class="project-title">Black Friday Sale E-mail</h5>
+          <div class="project">
             <div class="overlay"></div>
             <div class="p-links">
-                <span class="p-link">
-                    <a href="https://github.com/J-Guidry/promotional-email">
-                        <span><i class="fa fa-github"></i></span>
-                        Code
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="https://promo-email-jg.netlify.com/">
-                        <span><i class="fa fa-globe"></i></span>
-                        Live
-                    </a>
-                </span>
+              <span class="p-link">
+                <a href="https://github.com/J-Guidry/promotional-email">
+                  <span><i class="fa fa-github"></i></span>
+                  Code
+                </a>
+              </span>
+              <span class="p-link">
+                <a href="https://promo-email-jg.netlify.com/">
+                  <span><i class="fa fa-globe"></i></span>
+                  Live
+                </a>
+              </span>
             </div>
             <div class="project-img">
-                <img src="./images/promo-email.png" alt="promo email screenshot">
+              <img
+                src="./images/promo-email.png"
+                alt="promo email screenshot"
+              />
             </div>
-        </div>        
-    </div>
-</section>
+          </div>
+        </div>
+      </section>
 
-<header class="projects-header">
+      <header class="projects-header">
         <h2>Here Are My Web App Projects</h2>
-        <p>These projects use JavaScript to create more interactive applications.</p>
-    </header>
-<section class="projects">
-    <div class="project-tile">
-        <h5 class="project-title">Simple Productiviy App</h5>
-        <div class="project">
+        <p>
+          These projects use JavaScript to create more interactive applications.
+        </p>
+      </header>
+      <section class="projects">
+        <div class="project-tile">
+          <h5 class="project-title">Simple Productiviy App</h5>
+          <div class="project">
             <div class="overlay"></div>
             <div class="p-links">
-                <span class="p-link">
-                    <a href="https://github.com/J-Guidry/simplegtd">
-                        <span><i class="fa fa-github"></i></span>
-                        Code
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="https://simplegtd.netlify.com/">
-                        <span><i class="fa fa-globe"></i></span>
-                        Live
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="./writeups/gtd.html">
-                        Writeup
-                    </a>
-                </span>
+              <span class="p-link">
+                <a href="https://github.com/J-Guidry/simplegtd">
+                  <span><i class="fa fa-github"></i></span>
+                  Code
+                </a>
+              </span>
+              <span class="p-link">
+                <a href="https://simplegtd.netlify.com/">
+                  <span><i class="fa fa-globe"></i></span>
+                  Live
+                </a>
+              </span>
+              <span class="p-link">
+                <a href="./writeups/gtd.html"> Writeup </a>
+              </span>
             </div>
             <div class="project-img">
-                    <img src="./images/productivity.png" alt="productivity app screenshot">
+              <img
+                src="./images/productivity.png"
+                alt="productivity app screenshot"
+              />
             </div>
-        </div>
-        <div class="project-info">
+          </div>
+          <div class="project-info">
             <p>A productivity app to organize your tasks</p>
             <p>Uses Jquery, Bootstrap</p>
+          </div>
         </div>
-    </div>
 
-    <div class="project-tile">
-        <h5 class="project-title">Recipe Box</h5>
-        <div class="project">
+        <div class="project-tile">
+          <h5 class="project-title">Recipe Box</h5>
+          <div class="project">
             <div class="overlay"></div>
             <div class="p-links">
-                <span class="p-link">
-                    <a href="https://github.com/J-Guidry/simple-recipe-box/">
-                        <span><i class="fa fa-github"></i></span>
-                        Code
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="https://simple-recipe-box.netlify.com/">
-                        <span><i class="fa fa-globe"></i></span>
-                        Live
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="./writeups/recipe.html">
-                        Writeup
-                    </a>
-                </span>
+              <span class="p-link">
+                <a href="https://github.com/J-Guidry/simple-recipe-box/">
+                  <span><i class="fa fa-github"></i></span>
+                  Code
+                </a>
+              </span>
+              <span class="p-link">
+                <a href="https://simple-recipe-box.netlify.com/">
+                  <span><i class="fa fa-globe"></i></span>
+                  Live
+                </a>
+              </span>
+              <span class="p-link">
+                <a href="./writeups/recipe.html"> Writeup </a>
+              </span>
             </div>
             <div class="project-img">
-                <img src="./images/recipe-box.png" alt="recipe box screenshot">
+              <img src="./images/recipe-box.png" alt="recipe box screenshot" />
             </div>
-        </div>
-        <div class="project-info">
+          </div>
+          <div class="project-info">
             <p>A place to store your recipes</p>
             <p>Uses React.js</p>
+          </div>
         </div>
-    </div>
 
-    
-    <div class="project-tile">
-        <h5 class="project-title">Simon Game</h5>
-        <div class="project">
+        <div class="project-tile">
+          <h5 class="project-title">Simon Game</h5>
+          <div class="project">
             <div class="overlay"></div>
             <div class="p-links">
-                <span class="p-link">
-                    <a href="https://github.com/J-Guidry/simon-game/">
-                        <span><i class="fa fa-github"></i></span>
-                        Code
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="https://simon-game-6fd.netlify.com/">
-                        <span><i class="fa fa-globe"></i></span>
-                        Live
-                    </a>
-                </span>
-                <span class="p-link">
-                    <a href="./writeups/simon.html">
-                        Writeup
-                    </a>
-                </span>
+              <span class="p-link">
+                <a href="https://github.com/J-Guidry/simon-game/">
+                  <span><i class="fa fa-github"></i></span>
+                  Code
+                </a>
+              </span>
+              <span class="p-link">
+                <a href="https://simon-game-6fd.netlify.com/">
+                  <span><i class="fa fa-globe"></i></span>
+                  Live
+                </a>
+              </span>
+              <span class="p-link">
+                <a href="./writeups/simon.html"> Writeup </a>
+              </span>
             </div>
             <div class="project-img">
-                <img src="./images/simon.png" alt="simon game screenshot">
+              <img src="./images/simon.png" alt="simon game screenshot" />
             </div>
-        </div>
-        <div class="project-info">
+          </div>
+          <div class="project-info">
             <p>Match the colors in sequence</p>
             <p>Uses React.js</p>
+          </div>
         </div>
-    </div>
 
-    <div class="project-tile">
-    <h5 class="project-title">Wikipedia Viewer</h5>
-    <div class="project">
-        <div class="overlay"></div>
-        <div class="p-links">
-            <span class="p-link">
+        <div class="project-tile">
+          <h5 class="project-title">Wikipedia Viewer</h5>
+          <div class="project">
+            <div class="overlay"></div>
+            <div class="p-links">
+              <span class="p-link">
                 <a href="./live/viewer/viewer.html">
-                    <span><i class="fa fa-globe"></i></span>
-                    Live
+                  <span><i class="fa fa-globe"></i></span>
+                  Live
                 </a>
-            </span>
-            <span class="p-link">
-                <a href="./writeups/viewer.html">
-                    Writeup
-                </a>
-            </span>
+              </span>
+              <span class="p-link">
+                <a href="./writeups/viewer.html"> Writeup </a>
+              </span>
+            </div>
+            <div class="project-img">
+              <img
+                src="./images/viewer.png"
+                alt="Wikipedia Viewer screenshot"
+              />
+            </div>
+          </div>
+          <div class="project-info">
+            <p>Uses API to get Wikipedia articles</p>
+            <p>Uses Bootstrap</p>
+          </div>
         </div>
-        <div class="project-img">
-            <img src="./images/viewer.png" alt="Wikipedia Viewer screenshot">
-        </div>
-    </div>
-    <div class="project-info">
-        <p>Uses API to get Wikipedia articles</p>
-        <p>Uses Bootstrap</p>
-    </div>
-    </div>
-</section>
-</main>
-<footer>
-    <section id="contact-places">
+      </section>
+    </main>
+    <footer>
+      <section id="contact-places">
         <div id="github">
-          <a class="fa fa-github" 
-             href="https://github.com/J-Guidry"
-             id="profile-link"
-             target="_blank" 
-             aria-hidden="true"        
-             >
-             <span>Github</span> 
+          <a
+            class="fa fa-github"
+            href="https://github.com/J-Guidry"
+            id="profile-link"
+            target="_blank"
+            aria-hidden="true"
+          >
+            <span>Github</span>
           </a>
         </div>
-  
+
         <div id="linkedin">
-            <a class="fa fa-linkedin"  
-               href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
-               target="_blank"
-               aria-hidden="true"
-               >
-               <span>LinkedIn</span> 
-            </a>
-          </div>
+          <a
+            class="fa fa-linkedin"
+            href="https://www.linkedin.com/in/jhabari-guidry-625775173/"
+            target="_blank"
+            aria-hidden="true"
+          >
+            <span>LinkedIn</span>
+          </a>
+        </div>
       </section>
-</footer>
-</body>
+    </footer>
+  </body>
 </html>
