--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <section id="skills">
           <span>HTML</span><span>CSS</span><span>JavaScript</span>
           <span>Bootstrap</span><span>React</span>
-          <span>Git</span><span>Webpack</span><span>JSON</span>
+          <span>Git</span><span>Webpack</span><span>JSON</span><span>Sass</span>
       </section>
 
     </section>
