added netlify to form

--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
         </header>
         <div class="row">
           <div class="col-12">
-            <form method="post" action="#">
+            <form netlify name="contact" method="POST">
               <div class="row">
                 <div class="col-6 col-12-small">
                   <input type="text" name="name" id="name" placeholder="Name" />
