--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Miniport by HTML5 UP</title>
+    <title>Jhabari Guidry</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
