changed color of form placeholders and social media icons. removed angelist, added github link

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Jhabari Guidry</title>
+    <title>Jhabari Guidry Portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -241,14 +241,9 @@
                   ><span class="label">LinkedIn</span></a
                 >
               </li>
-              <li>
-                <a href="#" class="icon brands fa-angellist"
-                  ><span class="label">Angellist</span></a
-                >
-              </li>
 
               <li>
-                <a href="#" class="icon brands fa-github"
+                <a href="https://github.com/J-Guidry" class="icon brands fa-github"
                   ><span class="label">Github</span></a
                 >
               </li>
