package.json parcel removed, heading section centered for non-mobile

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <article id="top" class="wrapper style1">
       <div class="container">
         <div class="row">
-          <div class="col-8 col-7-large col-12-medium">
+          <div class="col-11">
             <header>
               <h1>
                 Hello. I'm <strong>Jhabari Guidry</strong>, Your Next Web Developer.
