--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,15 @@
           <div class="col-11">
             <header>
               <h1>
-                Hello. I'm <strong>Jhabari Guidry</strong>, Your Next Web Developer.
+                Hello. I'm <strong>Jhabari Guidry</strong>, Your Next Web
+                Developer.
               </h1>
             </header>
             <p>
               I like to build web sites. Whether you are a small business or an
               individual, I can build for you a website or update an existing
               one. Have a look around to see what we can build together. How can
-              I assist you? 
+              I assist you?
             </p>
           </div>
         </div>
@@ -58,11 +59,7 @@
               <div class="overlay"></div>
               <div class="p-links">
                 <span class="p-link">
-                  <span class="made">Made in</span>
-                  <span class="made-in">WordPress</span>
-                </span>
-                <span class="p-link">
-                  <a href="https://mock-agency.herokuapp.com/">
+                  <a href="https://agency-jg.netlify.app/">
                     <span><i class="fa fa-globe"></i></span>
                     Live
                   </a>
@@ -73,7 +70,7 @@
               </div>
             </div>
           </div>
-  
+
           <div class="project-tile">
             <h5 class="project-title">Landing Page</h5>
             <div class="project">
@@ -104,7 +101,10 @@
                 </span>
               </div>
               <div class="project-img">
-                <img src="./images/restaurant.png" alt="restaurant screenshot" />
+                <img
+                  src="./images/restaurant.png"
+                  alt="restaurant screenshot"
+                />
               </div>
             </div>
           </div>
@@ -190,19 +190,25 @@
             <h3>Find me on ...</h3>
             <ul class="social">
               <li>
-                <a href="https://twitter.com/JhabariG" class="icon brands fa-twitter"
+                <a
+                  href="https://twitter.com/JhabariG"
+                  class="icon brands fa-twitter"
                   ><span class="label">Twitter</span></a
                 >
               </li>
 
               <li>
-                <a href="https://www.linkedin.com/in/jhabari-guidry/" class="icon brands fa-linkedin-in"
+                <a
+                  href="https://www.linkedin.com/in/jhabari-guidry/"
+                  class="icon brands fa-linkedin-in"
                   ><span class="label">LinkedIn</span></a
                 >
               </li>
 
               <li>
-                <a href="https://github.com/J-Guidry" class="icon brands fa-github"
+                <a
+                  href="https://github.com/J-Guidry"
+                  class="icon brands fa-github"
                   ><span class="label">Github</span></a
                 >
               </li>
